// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read copilot tool reads a specific resources by UUID 1`] = `
"<token name="Size-32" uuid="_gnxKR8NG8ND" type="Spacing" value="var(--token-OJSN3W0Myvht)" resolvedValue="2rem"/>

<component name="Homepage" uuid="ypvAo6PBDTFP">
  <props>
  </props>
  <variants>
    <variant name=":focus" uuid="nXTFjlmK5XoA" kind="elementVariant" elementUuid="Sya0jp-3z04Q"/>
    <variant name=":focus" uuid="o0aQD1uD0PE7" kind="elementVariant" elementUuid="dmoXeGSEu9FR"/>
    <variant name=":focus" uuid="PSb4MDAD-yZ3" kind="elementVariant" elementUuid="Y2BCutCiq0ay"/>
  </variants>
  <base-variant-tpl-tree>
    <div id="_1xwXQlkUArr" style="display: plasmic-content-layout; position: relative; width: stretch; height: stretch; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; align-content: flex-start; justify-items: center">
      <section id="7weorkEjgQjD" style="display: plasmic-content-layout; position: relative; width: plasmic-layout-full-bleed; height: wrap; padding-left: 0px; padding-right: 0px; padding-bottom: 96px; padding-top: 96px; grid-row-gap: 16px; align-content: flex-start; justify-items: center">
        <h1 id="KU_MhnoNNJco" style="position: relative; width: stretch; height: wrap; margin-bottom: 32px">Welcome to your first page.</h1>
        <div id="-iuHCTiyShFt" style="position: relative; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; color: #000000; animation: none">If you haven't already done so, go back and learn the basics by going through the Plasmic Levels tutorial.

It's always easier to start from examples! Add a new page using a template—do this from the list of pages in the top toolbar.

Or press the big blue + button to start inserting items into this page.

Integrate this project into your codebase—press the Code button in the top right and follow the quickstart instructions.

Join our Slack community (icon in bottom left) for help any time.</div>
        <div id="2ABG11ETZTvR" style="position: relative; width: stretch; height: wrap; font-size: 16px; font-family: Inter; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">This project out of the box have been configured with:</div>
        <ul id="eQeO_eSOes1N" style="display: flex; width: stretch; height: wrap; font-size: 24px">
          <li id="wabr08GFAzMG" style="display: list-item; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">
            <a id="eCl5BM4cskoG" style="position: absolute; left: 0px; top: 0px">Customizable components</a>
          </li>
          <li id="v0BhJX7nDaCB" style="display: list-item; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">
            <a id="qjHUa7CWXs5E" style="position: absolute; left: 0px; top: 0px">Plasmic default animations</a>
          </li>
        </ul>
        <div id="qsWzrsjeP26j" style="width: stretch; height: wrap; font-size: 16px; font-family: Inter; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">Here are some example components:</div>
        <div id="oniEwFecMMg1" style="display: flex; flex-direction: row; position: relative; width: stretch; height: wrap; max-width: 100%; padding-left: 25px; padding-right: 25px; padding-bottom: 25px; padding-top: 25px; justify-content: center; align-items: center; plasmic-display-none: false; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-color: var(--token-O--cwH0Y8I-6); border-right-color: var(--token-O--cwH0Y8I-6); border-bottom-color: var(--token-O--cwH0Y8I-6); border-left-color: var(--token-O--cwH0Y8I-6); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.2); column-gap: 20px; flex-wrap: wrap; row-gap: 20px; align-content: center; animation: none">
          <plasmic-component id="Mph6D763rJVw" data-plasmic-component="button" style="max-width: 100%; width: 100px; animation: none">
          </plasmic-component>
          <div id="5dYTb3AXYM4H" style="display: flex; flex-direction: row; position: relative; align-items: center; justify-content: center; width: 33%; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; animation: none">
            <plasmic-component id="nDAyQ6rOezVl" data-plasmic-component="_switch" data-plasmic-name="Switch" style="max-width: 100%; width: 100px; position: relative; animation: none">
            </plasmic-component>
          </div>
          <plasmic-component id="ECPnnoz-UM9u" data-plasmic-component="checkboxGroup" data-plasmic-name="Checkbox Group" style="max-width: 100%; width: 150px; animation: none">
          </plasmic-component>
          <plasmic-component id="hq7D0qhcWq23" data-plasmic-component="slider" data-plasmic-name="Slider" style="max-width: 100%; width: 200px; animation: none">
          </plasmic-component>
          <div id="33CJ6KRHTbud" style="display: flex; flex-direction: row; position: relative; align-items: stretch; justify-content: flex-start; width: 200px; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; plasmic-display-none: false; animation: none">
            <plasmic-component id="yVNoh5O3v0cb" data-plasmic-component="select" data-plasmic-name="Select" style="max-width: 100%; animation: none">
            </plasmic-component>
          </div>
          <plasmic-component id="uQEzkCsn4RFC" data-plasmic-component="textField" data-plasmic-name="Text Field" style="max-width: 100%; width: 200px; animation: none">
          </plasmic-component>
        </div>
        <div id="NcrzEUE3a4S3" style="position: relative; width: stretch; height: wrap; max-width: 100%">While in preview mode, click the labels to trigger animation examples:</div>
        <div id="97FRf3FdU4Xb" style="display: flex; flex-direction: row; position: relative; align-items: stretch; justify-content: center; width: stretch; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; column-gap: 20px; flex-wrap: wrap; row-gap: 20px; align-content: center">
          <div id="lff_bY1tQVo_" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
            <span id="Sya0jp-3z04Q" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; animation: none">Bounce</span>
          </div>
          <div id="ffXO-uitG62-" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
            <span id="dmoXeGSEu9FR" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; padding-bottom: 20px; animation: none">Zoom In</span>
          </div>
          <div id="kfBIDbO7ypT1" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
            <span id="Y2BCutCiq0ay" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; animation: none">Slide In Left</span>
          </div>
        </div>
      </section>
    </div>
  </base-variant-tpl-tree>
  <VariantSettings>
    <variant name=":focus" uuid="nXTFjlmK5XoA">
      <element uuid="Sya0jp-3z04Q">
        <VariantSetting id="3008241">
          <RuleSet id="3008240">{"animation":"bouncemz8PGamSoahc 1s ease-in-out 0s 1 normal none running"}</RuleSet>
        </VariantSetting>
      </element>
    </variant>
    <variant name=":focus" uuid="o0aQD1uD0PE7">
      <element uuid="dmoXeGSEu9FR">
        <VariantSetting id="3008252">
          <RuleSet id="3008251">{"animation":"zoomIn8EsQyUe1F6D 1s ease-in-out 0s 1 normal none running"}</RuleSet>
        </VariantSetting>
      </element>
    </variant>
    <variant name=":focus" uuid="PSb4MDAD-yZ3">
      <element uuid="Y2BCutCiq0ay">
        <VariantSetting id="3008263">
          <RuleSet id="3008262">{"animation":"slideInLeftamPxFrYy2Bqz 1s ease-in-out 0s 1 normal none running"}</RuleSet>
        </VariantSetting>
      </element>
    </variant>
  </VariantSettings>
</component>

<component name="hostless-plasmic-head" uuid="3Q5tZgoUcjgc">
  <props>
    <prop name="title" uuid="p5kQHDlpFEfj" type="text"/>
    <prop name="description" uuid="8dv_Ql-lp9kh" type="text"/>
    <prop name="image" uuid="bolmtvJR9jc9" type="img"/>
    <prop name="canonical" uuid="T5eklPW1OMUk" type="text"/>
  </props>
  <variants>
  </variants>
  <base-variant-tpl-tree>
    <div id="I5WSi3eZbGYU" style="display: flex; flex-direction: row">
    </div>
  </base-variant-tpl-tree>
</component>

<div id="_1xwXQlkUArr" style="display: plasmic-content-layout; position: relative; width: stretch; height: stretch; padding-top: 0px; padding-right: 0px; padding-bottom: 0px; padding-left: 0px; align-content: flex-start; justify-items: center">
  <section id="7weorkEjgQjD" style="display: plasmic-content-layout; position: relative; width: plasmic-layout-full-bleed; height: wrap; padding-left: 0px; padding-right: 0px; padding-bottom: 96px; padding-top: 96px; grid-row-gap: 16px; align-content: flex-start; justify-items: center">
    <h1 id="KU_MhnoNNJco" style="position: relative; width: stretch; height: wrap; margin-bottom: 32px">Welcome to your first page.</h1>
    <div id="-iuHCTiyShFt" style="position: relative; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; color: #000000; animation: none">If you haven't already done so, go back and learn the basics by going through the Plasmic Levels tutorial.

It's always easier to start from examples! Add a new page using a template—do this from the list of pages in the top toolbar.

Or press the big blue + button to start inserting items into this page.

Integrate this project into your codebase—press the Code button in the top right and follow the quickstart instructions.

Join our Slack community (icon in bottom left) for help any time.</div>
    <div id="2ABG11ETZTvR" style="position: relative; width: stretch; height: wrap; font-size: 16px; font-family: Inter; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">This project out of the box have been configured with:</div>
    <ul id="eQeO_eSOes1N" style="display: flex; width: stretch; height: wrap; font-size: 24px">
      <li id="wabr08GFAzMG" style="display: list-item; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">
        <a id="eCl5BM4cskoG" style="position: absolute; left: 0px; top: 0px">Customizable components</a>
      </li>
      <li id="v0BhJX7nDaCB" style="display: list-item; width: stretch; height: wrap; font-family: Inter; font-size: 16px; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">
        <a id="qjHUa7CWXs5E" style="position: absolute; left: 0px; top: 0px">Plasmic default animations</a>
      </li>
    </ul>
    <div id="qsWzrsjeP26j" style="width: stretch; height: wrap; font-size: 16px; font-family: Inter; font-weight: 400; font-style: normal; color: #000000; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip">Here are some example components:</div>
    <div id="oniEwFecMMg1" style="display: flex; flex-direction: row; position: relative; width: stretch; height: wrap; max-width: 100%; padding-left: 25px; padding-right: 25px; padding-bottom: 25px; padding-top: 25px; justify-content: center; align-items: center; plasmic-display-none: false; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-color: var(--token-O--cwH0Y8I-6); border-right-color: var(--token-O--cwH0Y8I-6); border-bottom-color: var(--token-O--cwH0Y8I-6); border-left-color: var(--token-O--cwH0Y8I-6); border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.2); column-gap: 20px; flex-wrap: wrap; row-gap: 20px; align-content: center; animation: none">
      <plasmic-component id="Mph6D763rJVw" data-plasmic-component="button" style="max-width: 100%; width: 100px; animation: none">
      </plasmic-component>
      <div id="5dYTb3AXYM4H" style="display: flex; flex-direction: row; position: relative; align-items: center; justify-content: center; width: 33%; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; animation: none">
        <plasmic-component id="nDAyQ6rOezVl" data-plasmic-component="_switch" data-plasmic-name="Switch" style="max-width: 100%; width: 100px; position: relative; animation: none">
        </plasmic-component>
      </div>
      <plasmic-component id="ECPnnoz-UM9u" data-plasmic-component="checkboxGroup" data-plasmic-name="Checkbox Group" style="max-width: 100%; width: 150px; animation: none">
      </plasmic-component>
      <plasmic-component id="hq7D0qhcWq23" data-plasmic-component="slider" data-plasmic-name="Slider" style="max-width: 100%; width: 200px; animation: none">
      </plasmic-component>
      <div id="33CJ6KRHTbud" style="display: flex; flex-direction: row; position: relative; align-items: stretch; justify-content: flex-start; width: 200px; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; plasmic-display-none: false; animation: none">
        <plasmic-component id="yVNoh5O3v0cb" data-plasmic-component="select" data-plasmic-name="Select" style="max-width: 100%; animation: none">
        </plasmic-component>
      </div>
      <plasmic-component id="uQEzkCsn4RFC" data-plasmic-component="textField" data-plasmic-name="Text Field" style="max-width: 100%; width: 200px; animation: none">
      </plasmic-component>
    </div>
    <div id="NcrzEUE3a4S3" style="position: relative; width: stretch; height: wrap; max-width: 100%">While in preview mode, click the labels to trigger animation examples:</div>
    <div id="97FRf3FdU4Xb" style="display: flex; flex-direction: row; position: relative; align-items: stretch; justify-content: center; width: stretch; height: wrap; max-width: 100%; padding-left: 8px; padding-right: 8px; padding-bottom: 8px; padding-top: 8px; column-gap: 20px; flex-wrap: wrap; row-gap: 20px; align-content: center">
      <div id="lff_bY1tQVo_" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
        <span id="Sya0jp-3z04Q" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; animation: none">Bounce</span>
      </div>
      <div id="ffXO-uitG62-" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
        <span id="dmoXeGSEu9FR" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; padding-bottom: 20px; animation: none">Zoom In</span>
      </div>
      <div id="kfBIDbO7ypT1" style="display: flex; flex-direction: row; width: 200px; height: 200px; background: linear-gradient(#f0f0f0, #f0f0f0); box-shadow: 0 0 10px 0 rgba(0,0,0,0.1); justify-content: center; align-items: center; overflow: hidden; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding-top: 10px; padding-right: 10px; padding-bottom: 10px; padding-left: 10px; animation: none">
        <span id="Y2BCutCiq0ay" style="font-size: 24px; font-weight: bold; padding-top: 20px; padding-right: 20px; padding-bottom: 20px; padding-left: 20px; cursor: pointer; font-family: Inter; font-style: normal; color: #535353; text-align: left; text-transform: none; line-height: 1.5; letter-spacing: normal; white-space: pre-wrap; user-select: text; text-decoration-line: none; text-overflow: clip; animation: none">Slide In Left</span>
      </div>
    </div>
  </section>
</div>"
`;

exports[`read copilot tool reads specific animations by UUID with full @keyframes 1`] = `
"<animation name="Bounce" uuid="mz8pGamSoahc">
  @keyframes bouncemz8PGamSoahc {
    0% {
    transform: translate3d(0px, 0px, 0);  
    }
    20% {
    transform: translate3d(0px, 0px, 0);  
    }
    40% {
    transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
    }
    43% {
    transform: translate3d(0, -30px, 0) scale3d(1, 1.1, 1);  
    }
    53% {
    transform: translate3d(0px, 0px, 0);  
    }
    70% {
    transform: translate3d(0, -15px, 0) scale3d(1, 1.05, 1);  
    }
    80% {
    transform: translate3d(0px, 0px, 0) scale3d(1, 0.95, 1);  
    }
    90% {
    transform: translate3d(0, -4px, 0) scale3d(1, 1.02, 1);  
    }
    100% {
    transform: translate3d(0px, 0px, 0);  
    }
  }
</animation>
<animation name="Flash" uuid="gywO1jkB0c0b">
  @keyframes flashgywO1JkB0C0B {
    0% {
    opacity: 1;  
    }
    25% {
    opacity: 0;  
    }
    50% {
    opacity: 1;  
    }
    75% {
    opacity: 0;  
    }
    100% {
    opacity: 1;  
    }
  }
</animation>"
`;

exports[`read copilot tool returns invalid-resource for non-existent invalid uuids 1`] = `
"<invalid-resource uuid="non-existent-uuid" type="token">Token with UUID "non-existent-uuid" not found.</invalid-resource>
<invalid-resource uuid="non-existent-uuid" type="component">Component with UUID "non-existent-uuid" not found.</invalid-resource>
<invalid-resource uuid="non-existent-comp" type="component">Component with UUID "non-existent-comp" not found.</invalid-resource>"
`;

exports[`read copilot tool serializes project level data and specific uuids reads project animations as a minimal list 1`] = `
"<project>
  <animations>
    <animation name="Bounce" uuid="mz8pGamSoahc"/>
    <animation name="Flash" uuid="gywO1jkB0c0b"/>
    <animation name="Pulse" uuid="0DlLE3ZmR0lr"/>
    <animation name="Shake X" uuid="I3e22tKHL0k5"/>
    <animation name="Shake Y" uuid="L0kBo9LJTzBS"/>
    <animation name="Bounce In" uuid="3hoXU1WP6GS8"/>
    <animation name="Bounce In Down" uuid="hp0hXEW9IovK"/>
    <animation name="Bounce In Up" uuid="OUEx47B0gs0N"/>
    <animation name="Bounce Out" uuid="DI9YSao-ElcP"/>
    <animation name="Bounce Out Down" uuid="hEnFj0ViWREN"/>
    <animation name="Bounce Out Up" uuid="xZzUZYpv_BEF"/>
    <animation name="Fade In" uuid="K8aS4cD8LxJC"/>
    <animation name="Fade In Down" uuid="3wejw0KdhvkT"/>
    <animation name="Fade In Left" uuid="4b8z_yZskL8t"/>
    <animation name="Fade In Right" uuid="Kdx1r1C3T-k5"/>
    <animation name="Fade In Up" uuid="CV8t_94hMZOJ"/>
    <animation name="Fade Out" uuid="WsmEXWsKHehM"/>
    <animation name="Fade Out Down" uuid="xkwpUUXKXaKh"/>
    <animation name="Fade Out Left" uuid="4I7FFZXpTQqw"/>
    <animation name="Fade Out Right" uuid="v7VeJyZF8OiV"/>
    <animation name="Fade Out Up" uuid="WCNCocbUJlyZ"/>
    <animation name="Zoom In" uuid="8_EsQyUE1f6D"/>
    <animation name="Zoom In Down" uuid="nKgmo_Ih8ecU"/>
    <animation name="Zoom In Up" uuid="wDQdAk9BrYhY"/>
    <animation name="Zoom Out" uuid="-8XcUEhc_tFz"/>
    <animation name="Zoom Out Down" uuid="T1UpFUnBqbit"/>
    <animation name="Zoom Out Up" uuid="Mk_d1Et3X2KO"/>
    <animation name="Slide In Down" uuid="H_u23sDnaGBJ"/>
    <animation name="Slide In Left" uuid="amPxFRYy2Bqz"/>
    <animation name="Slide In Right" uuid="tlJWuYi8yUnT"/>
    <animation name="Slide In Up" uuid="l416FyqrLiVP"/>
    <animation name="Slide Out Down" uuid="IQTsEFKh0RaO"/>
    <animation name="Slide Out Left" uuid="yGtWsF8QCRpo"/>
    <animation name="Slide Out Right" uuid="JR7y0rUT-Qox"/>
    <animation name="Slide Out Up" uuid="x_snDqhPUPUr"/>
  </animations>
</project>"
`;

exports[`read copilot tool serializes project level data and specific uuids reads project components 1`] = `
"<project>
  <components>
    <component name="Homepage" uuid="ypvAo6PBDTFP" type="page" path="/"/>
    <component name="hostless-plasmic-head" uuid="3Q5tZgoUcjgc" type="code"/>
    <component name="plasmic-data-source-fetcher" uuid="eG7R2DxKySYs" type="code"/>
    <component name="Button" uuid="OD5_PLaXT_1t" type="plain"/>
    <component name="Label" uuid="JVCv_cilvEWB" type="plain"/>
    <component name="Checkbox" uuid="eTjAMScYpz_5" type="plain"/>
    <component name="Description" uuid="8ANP8VyLXTfo" type="plain"/>
    <component name="Checkbox Group" uuid="8weYhId3_t7B" type="plain"/>
    <component name="Radio" uuid="DhF49R8vE8x5" type="plain"/>
    <component name="Radio Group" uuid="tNAN12ZT21NW" type="plain"/>
    <component name="Menu Item" uuid="pzmtbEh09pA0" type="plain"/>
    <component name="Menu Section" uuid="Fx3lwSohpxtr" type="plain"/>
    <component name="Menu Popover" uuid="8w0OrLGU6fuW" type="plain"/>
    <component name="Select" uuid="XFH-QbD_Wj0E" type="plain"/>
    <component name="Combobox" uuid="m10qGbJjM9JU" type="plain"/>
    <component name="Switch" uuid="bpAscHZX1liV" type="plain"/>
    <component name="Text Input" uuid="EceIiqvGOOKH" type="plain"/>
    <component name="TextArea Input" uuid="WPRFFrib1Q9_" type="plain"/>
    <component name="Text Field" uuid="M0hmO976FWhA" type="plain"/>
    <component name="Slider Thumb" uuid="bGKMrtyTL9ht" type="plain"/>
    <component name="Slider" uuid="O3lbnxqQd9_J" type="plain"/>
    <component name="Range Slider" uuid="9TpJxmLV-WtC" type="plain"/>
    <component name="Modal" uuid="JMMmDTbwlNba" type="plain"/>
    <component name="Overlay Arrow" uuid="1tPqNrfR1BwC" type="plain"/>
    <component name="Popover" uuid="1QxpUBoAwkD7" type="plain"/>
    <component name="Drawer" uuid="66fbwz7FPx2e" type="plain"/>
    <component name="Tooltip" uuid="ASiSVqfHCthg" type="plain"/>
  </components>
</project>"
`;

exports[`read copilot tool serializes project level data and specific uuids reads project screen breakpoints and global variants 1`] = `
"<project>
  <screenBreakpoints>
    <screenBreakpoint name="Mobile only" uuid="pIBrJnbkAQLL" maxWidth="768"/>
  </screenBreakpoints>
  <globalVariantGroups>
    <group name="Screen" uuid="fYQvF6l9S5H7">
      <variant name="Mobile only" uuid="pIBrJnbkAQLL"/>
    </group>
  </globalVariantGroups>
</project>"
`;

exports[`read copilot tool serializes project level data and specific uuids reads project tokens with resolved values 1`] = `
"<project>
  <tokens>
    <token name="Size-32" uuid="_gnxKR8NG8ND" type="Spacing" value="var(--token-OJSN3W0Myvht)" resolvedValue="2rem"/>
    <token name="Size-16" uuid="pNP36mHj6x6O" type="Spacing" value="var(--token-0tl2H1TRPHhV)" resolvedValue="1rem"/>
    <token name="Size-8" uuid="J8bgk1cLaZ5G" type="Spacing" value="var(--token-cfon0PHiXQoL)" resolvedValue="0.5rem"/>
    <token name="Muted/Muted-Soft-Foreground" uuid="mQy-u9ShBeeM" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Size-4" uuid="iV97hAoHAnKd" type="Spacing" value="var(--token-RuQNZpYm0Yds)" resolvedValue="0.25rem"/>
    <token name="Size-12" uuid="50jqnrkhPFjk" type="Spacing" value="var(--token-PKf5XaFatup3)" resolvedValue="0.75rem"/>
    <token name="Size-24" uuid="5Dj8sI4bqV2C" type="Spacing" value="var(--token-ekJK2BNXfyOR)" resolvedValue="1.5rem"/>
    <token name="Font-LG" uuid="QkMNDbZUI9zH" type="FontSize" value="1.25rem"/>
    <token name="Basic/Container-Background" uuid="48p0Jlumb6Of" type="Color" value="#FFFFFF"/>
    <token name="Brand/Brand" uuid="6R_RCgXDnfCy" type="Color" value="var(--token-3kYlE5VFDAO5)" resolvedValue="#2563EB"/>
    <token name="Sans-serif" uuid="VRn5eg_X38q7" type="FontFamily" value="Inter"/>
    <token name="Font-MD" uuid="mdlFAaQL9cZT" type="FontSize" value="1rem"/>
    <token name="Line-height-MD" uuid="bFkpmJG5PZPn" type="LineHeight" value="1.25"/>
    <token name="Size-6" uuid="-0yvAvGYfFhX" type="Spacing" value="var(--token-c8-rjzKYORFj)" resolvedValue="0.375rem"/>
    <token name="Neutral/Neutral" uuid="W06EMLry-Nfs" type="Color" value="var(--token-Cn459MKRbWu9)" resolvedValue="#374151"/>
    <token name="Destructive/Destructive" uuid="HFP4U80F-qYK" type="Color" value="var(--token-u2RgMe-uQAju)" resolvedValue="#DC2626"/>
    <token name="Muted/Muted" uuid="c3a_UW9vDP9I" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Font-SM" uuid="lD1RduCNRWBr" type="FontSize" value="0.75rem"/>
    <token name="Line-height-SM" uuid="TeiPG4bVS8s9" type="LineHeight" value="1"/>
    <token name="Line-height-LG" uuid="nnknQsSF9X4M" type="LineHeight" value="1.4"/>
    <token name="Size-2" uuid="aR8bR72wtSYZ" type="Spacing" value="var(--token-IUVIp1DHBSFd)" resolvedValue="0.125rem"/>
    <token name="Success/Success" uuid="KIKkVE5HITTq" type="Color" value="var(--token-8odYYBvkaHVX)" resolvedValue="#16A34A"/>
    <token name="Warning/Warning" uuid="cpEXg673w3LE" type="Color" value="var(--token-L6pBmIkiSkx4)" resolvedValue="#FACC15"/>
    <token name="Brand/Brand-Soft" uuid="o3a6NOLIofKT" type="Color" value="var(--token-w7EPkOMSh2Xb)" resolvedValue="#DBEAFE"/>
    <token name="Neutral/Neutral-Soft" uuid="iwAtTzjIrY52" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Muted/Muted-Soft" uuid="_Zhqc4oeimE_" type="Color" value="var(--token-NyTb7hfbZNyN)" resolvedValue="#F3F4F6"/>
    <token name="Success/Success-Soft" uuid="iJ_NxhLUkdWo" type="Color" value="var(--token-Xs2o77o8RCB-)" resolvedValue="#DCFCE7"/>
    <token name="Warning/Warning-Soft" uuid="996B2a7W81uk" type="Color" value="var(--token-BUYkn0c_BT-J)" resolvedValue="#FEF9C3"/>
    <token name="Destructive/Destructive-Soft" uuid="YMdR_Biy5WbG" type="Color" value="var(--token-I0_BUYzH206C)" resolvedValue="#FEE2E2"/>
    <token name="Brand/Brand-Border" uuid="JI5CHdDLi9zk" type="Color" value="var(--token-qsHKKmoi9Z2N)" resolvedValue="#93C5FD"/>
    <token name="Neutral/Neutral-Border" uuid="XYb5IRzNoqX7" type="Color" value="var(--token-GQQSYIXwL9h_)" resolvedValue="#D1D5DB"/>
    <token name="Muted/Muted-Border" uuid="lQAqvQ-ZHuDc" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Success/Success-Border" uuid="-HhbTi7UcSzz" type="Color" value="var(--token-Y7e5ggCd09M6)" resolvedValue="#86EFAC"/>
    <token name="Warning/Warning-Border" uuid="geOMiPEkmrjm" type="Color" value="var(--token-N2GVB8b4MTkJ)" resolvedValue="#FDE047"/>
    <token name="Destructive/Destructive-Border" uuid="jYEUNEWo82iM" type="Color" value="var(--token-8XWkpFEFETNw)" resolvedValue="#FCA5A5"/>
    <token name="Interaction / Hovered" uuid="1mMJ2FOHi_GH" type="Color" value="#0000001A"/>
    <token name="Interaction / Disabled" uuid="uSzxYmtL19gq" type="Color" value="#FFFFFF40"/>
    <token name="Interaction / Pressed" uuid="jbqfmQJrnHdW" type="Color" value="#00000033"/>
    <token name="Size-10" uuid="yk7m7bwFJ02R" type="Spacing" value="var(--token-vINZR3MlEOSB)" resolvedValue="0.625rem"/>
    <token name="Brand/Brand-Foreground" uuid="8Z9NGJU5I115" type="Color" value="var(--token-M0LHGDR880st)" resolvedValue="#EFF6FF"/>
    <token name="Neutral/Neutral-Foreground" uuid="jDYABwPNRgB6" type="Color" value="var(--token-w0BmYAdVh1BD)" resolvedValue="#F9FAFB"/>
    <token name="Muted/Muted-Foreground" uuid="Le_d7m1UzXV7" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Brand/Brand-Soft-Foreground" uuid="_RWFFiNKNXVv" type="Color" value="var(--token-wXhZBDyFIH77)" resolvedValue="#1E3A8A"/>
    <token name="Warning/Warning-Foreground" uuid="gUYL2yuOGlk5" type="Color" value="var(--token-IM1QVYeIZBIA)" resolvedValue="#422006"/>
    <token name="Success/Success-Foreground" uuid="T19iHLx7o2j3" type="Color" value="var(--token-d5rxOApLiBXu)" resolvedValue="#F0FDF4"/>
    <token name="Destructive/Destructive-Foreground" uuid="KY151bWozx0p" type="Color" value="var(--token-wO2qMySVKYXU)" resolvedValue="#FEF2F2"/>
    <token name="Neutral/Neutral-Soft-Foreground" uuid="UxJ9eCmT0rvR" type="Color" value="var(--token-ZnueTOHp2Zir)" resolvedValue="#111827"/>
    <token name="Success/Success-Soft-Foreground" uuid="sanUPHTvHkN8" type="Color" value="var(--token-MD2kb85IOAun)" resolvedValue="#14532D"/>
    <token name="Warning/Warning-Soft-Foreground" uuid="ykcwO7egWlo9" type="Color" value="var(--token-Work-inyFZuD)" resolvedValue="#713F12"/>
    <token name="Destructive/Destructive-Soft-Foreground" uuid="kqh85af0nuZn" type="Color" value="var(--token-c1-8q9kxmrq_)" resolvedValue="#7F1D1D"/>
    <token name="Basic/Text-Primary" uuid="ZX33JwqKe1KQ" type="Color" value="var(--token-4Cdw41zGDm2p)" resolvedValue="#030712"/>
    <token name="Basic/Text-Secondary" uuid="O7HlhsyUcTLk" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Size-20" uuid="41IdgVnm_uZQ" type="Spacing" value="var(--token-TONjX_YbO9_T)" resolvedValue="1.25rem"/>
    <token name="Basic/Ring" uuid="6w7DbBUQGdRg" type="Color" value="var(--token-RN6-6smk2YHi)" resolvedValue="#9CA3AF"/>
    <token name="Basic/Border" uuid="O--cwH0Y8I-6" type="Color" value="var(--token-GQQSYIXwL9h_)" resolvedValue="#D1D5DB"/>
    <token name="Muted/Muted-Soft-Hover" uuid="vXHzDv-NQvAm" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Basic/Input-Background" uuid="oYen04JAIf3J" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Basic/Overlay-Background" uuid="ghoU2mpMJmil" type="Color" value="#0A0A0A80"/>
    <token name="Basic/Container-Background-Dark" uuid="X4GQ8bRemoGX" type="Color" value="var(--token-c-y4Lbl8pLuG)" resolvedValue="#171717"/>
  </tokens>
</project>"
`;

exports[`read copilot tool serializes project level data and specific uuids reads project with all filters enabled 1`] = `
"<project>
  <components>
    <component name="Homepage" uuid="ypvAo6PBDTFP" type="page" path="/"/>
    <component name="hostless-plasmic-head" uuid="3Q5tZgoUcjgc" type="code"/>
    <component name="plasmic-data-source-fetcher" uuid="eG7R2DxKySYs" type="code"/>
    <component name="Button" uuid="OD5_PLaXT_1t" type="plain"/>
    <component name="Label" uuid="JVCv_cilvEWB" type="plain"/>
    <component name="Checkbox" uuid="eTjAMScYpz_5" type="plain"/>
    <component name="Description" uuid="8ANP8VyLXTfo" type="plain"/>
    <component name="Checkbox Group" uuid="8weYhId3_t7B" type="plain"/>
    <component name="Radio" uuid="DhF49R8vE8x5" type="plain"/>
    <component name="Radio Group" uuid="tNAN12ZT21NW" type="plain"/>
    <component name="Menu Item" uuid="pzmtbEh09pA0" type="plain"/>
    <component name="Menu Section" uuid="Fx3lwSohpxtr" type="plain"/>
    <component name="Menu Popover" uuid="8w0OrLGU6fuW" type="plain"/>
    <component name="Select" uuid="XFH-QbD_Wj0E" type="plain"/>
    <component name="Combobox" uuid="m10qGbJjM9JU" type="plain"/>
    <component name="Switch" uuid="bpAscHZX1liV" type="plain"/>
    <component name="Text Input" uuid="EceIiqvGOOKH" type="plain"/>
    <component name="TextArea Input" uuid="WPRFFrib1Q9_" type="plain"/>
    <component name="Text Field" uuid="M0hmO976FWhA" type="plain"/>
    <component name="Slider Thumb" uuid="bGKMrtyTL9ht" type="plain"/>
    <component name="Slider" uuid="O3lbnxqQd9_J" type="plain"/>
    <component name="Range Slider" uuid="9TpJxmLV-WtC" type="plain"/>
    <component name="Modal" uuid="JMMmDTbwlNba" type="plain"/>
    <component name="Overlay Arrow" uuid="1tPqNrfR1BwC" type="plain"/>
    <component name="Popover" uuid="1QxpUBoAwkD7" type="plain"/>
    <component name="Drawer" uuid="66fbwz7FPx2e" type="plain"/>
    <component name="Tooltip" uuid="ASiSVqfHCthg" type="plain"/>
  </components>
  <screenBreakpoints>
    <screenBreakpoint name="Mobile only" uuid="pIBrJnbkAQLL" maxWidth="768"/>
  </screenBreakpoints>
  <globalVariantGroups>
    <group name="Screen" uuid="fYQvF6l9S5H7">
      <variant name="Mobile only" uuid="pIBrJnbkAQLL"/>
    </group>
  </globalVariantGroups>
  <tokens>
    <token name="Size-32" uuid="_gnxKR8NG8ND" type="Spacing" value="var(--token-OJSN3W0Myvht)" resolvedValue="2rem"/>
    <token name="Size-16" uuid="pNP36mHj6x6O" type="Spacing" value="var(--token-0tl2H1TRPHhV)" resolvedValue="1rem"/>
    <token name="Size-8" uuid="J8bgk1cLaZ5G" type="Spacing" value="var(--token-cfon0PHiXQoL)" resolvedValue="0.5rem"/>
    <token name="Muted/Muted-Soft-Foreground" uuid="mQy-u9ShBeeM" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Size-4" uuid="iV97hAoHAnKd" type="Spacing" value="var(--token-RuQNZpYm0Yds)" resolvedValue="0.25rem"/>
    <token name="Size-12" uuid="50jqnrkhPFjk" type="Spacing" value="var(--token-PKf5XaFatup3)" resolvedValue="0.75rem"/>
    <token name="Size-24" uuid="5Dj8sI4bqV2C" type="Spacing" value="var(--token-ekJK2BNXfyOR)" resolvedValue="1.5rem"/>
    <token name="Font-LG" uuid="QkMNDbZUI9zH" type="FontSize" value="1.25rem"/>
    <token name="Basic/Container-Background" uuid="48p0Jlumb6Of" type="Color" value="#FFFFFF"/>
    <token name="Brand/Brand" uuid="6R_RCgXDnfCy" type="Color" value="var(--token-3kYlE5VFDAO5)" resolvedValue="#2563EB"/>
    <token name="Sans-serif" uuid="VRn5eg_X38q7" type="FontFamily" value="Inter"/>
    <token name="Font-MD" uuid="mdlFAaQL9cZT" type="FontSize" value="1rem"/>
    <token name="Line-height-MD" uuid="bFkpmJG5PZPn" type="LineHeight" value="1.25"/>
    <token name="Size-6" uuid="-0yvAvGYfFhX" type="Spacing" value="var(--token-c8-rjzKYORFj)" resolvedValue="0.375rem"/>
    <token name="Neutral/Neutral" uuid="W06EMLry-Nfs" type="Color" value="var(--token-Cn459MKRbWu9)" resolvedValue="#374151"/>
    <token name="Destructive/Destructive" uuid="HFP4U80F-qYK" type="Color" value="var(--token-u2RgMe-uQAju)" resolvedValue="#DC2626"/>
    <token name="Muted/Muted" uuid="c3a_UW9vDP9I" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Font-SM" uuid="lD1RduCNRWBr" type="FontSize" value="0.75rem"/>
    <token name="Line-height-SM" uuid="TeiPG4bVS8s9" type="LineHeight" value="1"/>
    <token name="Line-height-LG" uuid="nnknQsSF9X4M" type="LineHeight" value="1.4"/>
    <token name="Size-2" uuid="aR8bR72wtSYZ" type="Spacing" value="var(--token-IUVIp1DHBSFd)" resolvedValue="0.125rem"/>
    <token name="Success/Success" uuid="KIKkVE5HITTq" type="Color" value="var(--token-8odYYBvkaHVX)" resolvedValue="#16A34A"/>
    <token name="Warning/Warning" uuid="cpEXg673w3LE" type="Color" value="var(--token-L6pBmIkiSkx4)" resolvedValue="#FACC15"/>
    <token name="Brand/Brand-Soft" uuid="o3a6NOLIofKT" type="Color" value="var(--token-w7EPkOMSh2Xb)" resolvedValue="#DBEAFE"/>
    <token name="Neutral/Neutral-Soft" uuid="iwAtTzjIrY52" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Muted/Muted-Soft" uuid="_Zhqc4oeimE_" type="Color" value="var(--token-NyTb7hfbZNyN)" resolvedValue="#F3F4F6"/>
    <token name="Success/Success-Soft" uuid="iJ_NxhLUkdWo" type="Color" value="var(--token-Xs2o77o8RCB-)" resolvedValue="#DCFCE7"/>
    <token name="Warning/Warning-Soft" uuid="996B2a7W81uk" type="Color" value="var(--token-BUYkn0c_BT-J)" resolvedValue="#FEF9C3"/>
    <token name="Destructive/Destructive-Soft" uuid="YMdR_Biy5WbG" type="Color" value="var(--token-I0_BUYzH206C)" resolvedValue="#FEE2E2"/>
    <token name="Brand/Brand-Border" uuid="JI5CHdDLi9zk" type="Color" value="var(--token-qsHKKmoi9Z2N)" resolvedValue="#93C5FD"/>
    <token name="Neutral/Neutral-Border" uuid="XYb5IRzNoqX7" type="Color" value="var(--token-GQQSYIXwL9h_)" resolvedValue="#D1D5DB"/>
    <token name="Muted/Muted-Border" uuid="lQAqvQ-ZHuDc" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Success/Success-Border" uuid="-HhbTi7UcSzz" type="Color" value="var(--token-Y7e5ggCd09M6)" resolvedValue="#86EFAC"/>
    <token name="Warning/Warning-Border" uuid="geOMiPEkmrjm" type="Color" value="var(--token-N2GVB8b4MTkJ)" resolvedValue="#FDE047"/>
    <token name="Destructive/Destructive-Border" uuid="jYEUNEWo82iM" type="Color" value="var(--token-8XWkpFEFETNw)" resolvedValue="#FCA5A5"/>
    <token name="Interaction / Hovered" uuid="1mMJ2FOHi_GH" type="Color" value="#0000001A"/>
    <token name="Interaction / Disabled" uuid="uSzxYmtL19gq" type="Color" value="#FFFFFF40"/>
    <token name="Interaction / Pressed" uuid="jbqfmQJrnHdW" type="Color" value="#00000033"/>
    <token name="Size-10" uuid="yk7m7bwFJ02R" type="Spacing" value="var(--token-vINZR3MlEOSB)" resolvedValue="0.625rem"/>
    <token name="Brand/Brand-Foreground" uuid="8Z9NGJU5I115" type="Color" value="var(--token-M0LHGDR880st)" resolvedValue="#EFF6FF"/>
    <token name="Neutral/Neutral-Foreground" uuid="jDYABwPNRgB6" type="Color" value="var(--token-w0BmYAdVh1BD)" resolvedValue="#F9FAFB"/>
    <token name="Muted/Muted-Foreground" uuid="Le_d7m1UzXV7" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Brand/Brand-Soft-Foreground" uuid="_RWFFiNKNXVv" type="Color" value="var(--token-wXhZBDyFIH77)" resolvedValue="#1E3A8A"/>
    <token name="Warning/Warning-Foreground" uuid="gUYL2yuOGlk5" type="Color" value="var(--token-IM1QVYeIZBIA)" resolvedValue="#422006"/>
    <token name="Success/Success-Foreground" uuid="T19iHLx7o2j3" type="Color" value="var(--token-d5rxOApLiBXu)" resolvedValue="#F0FDF4"/>
    <token name="Destructive/Destructive-Foreground" uuid="KY151bWozx0p" type="Color" value="var(--token-wO2qMySVKYXU)" resolvedValue="#FEF2F2"/>
    <token name="Neutral/Neutral-Soft-Foreground" uuid="UxJ9eCmT0rvR" type="Color" value="var(--token-ZnueTOHp2Zir)" resolvedValue="#111827"/>
    <token name="Success/Success-Soft-Foreground" uuid="sanUPHTvHkN8" type="Color" value="var(--token-MD2kb85IOAun)" resolvedValue="#14532D"/>
    <token name="Warning/Warning-Soft-Foreground" uuid="ykcwO7egWlo9" type="Color" value="var(--token-Work-inyFZuD)" resolvedValue="#713F12"/>
    <token name="Destructive/Destructive-Soft-Foreground" uuid="kqh85af0nuZn" type="Color" value="var(--token-c1-8q9kxmrq_)" resolvedValue="#7F1D1D"/>
    <token name="Basic/Text-Primary" uuid="ZX33JwqKe1KQ" type="Color" value="var(--token-4Cdw41zGDm2p)" resolvedValue="#030712"/>
    <token name="Basic/Text-Secondary" uuid="O7HlhsyUcTLk" type="Color" value="var(--token-MGudh00NLP3q)" resolvedValue="#6B7280"/>
    <token name="Size-20" uuid="41IdgVnm_uZQ" type="Spacing" value="var(--token-TONjX_YbO9_T)" resolvedValue="1.25rem"/>
    <token name="Basic/Ring" uuid="6w7DbBUQGdRg" type="Color" value="var(--token-RN6-6smk2YHi)" resolvedValue="#9CA3AF"/>
    <token name="Basic/Border" uuid="O--cwH0Y8I-6" type="Color" value="var(--token-GQQSYIXwL9h_)" resolvedValue="#D1D5DB"/>
    <token name="Muted/Muted-Soft-Hover" uuid="vXHzDv-NQvAm" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Basic/Input-Background" uuid="oYen04JAIf3J" type="Color" value="var(--token-YTNNB1KtOvN9)" resolvedValue="#E5E7EB"/>
    <token name="Basic/Overlay-Background" uuid="ghoU2mpMJmil" type="Color" value="#0A0A0A80"/>
    <token name="Basic/Container-Background-Dark" uuid="X4GQ8bRemoGX" type="Color" value="var(--token-c-y4Lbl8pLuG)" resolvedValue="#171717"/>
  </tokens>
  <animations>
    <animation name="Bounce" uuid="mz8pGamSoahc"/>
    <animation name="Flash" uuid="gywO1jkB0c0b"/>
    <animation name="Pulse" uuid="0DlLE3ZmR0lr"/>
    <animation name="Shake X" uuid="I3e22tKHL0k5"/>
    <animation name="Shake Y" uuid="L0kBo9LJTzBS"/>
    <animation name="Bounce In" uuid="3hoXU1WP6GS8"/>
    <animation name="Bounce In Down" uuid="hp0hXEW9IovK"/>
    <animation name="Bounce In Up" uuid="OUEx47B0gs0N"/>
    <animation name="Bounce Out" uuid="DI9YSao-ElcP"/>
    <animation name="Bounce Out Down" uuid="hEnFj0ViWREN"/>
    <animation name="Bounce Out Up" uuid="xZzUZYpv_BEF"/>
    <animation name="Fade In" uuid="K8aS4cD8LxJC"/>
    <animation name="Fade In Down" uuid="3wejw0KdhvkT"/>
    <animation name="Fade In Left" uuid="4b8z_yZskL8t"/>
    <animation name="Fade In Right" uuid="Kdx1r1C3T-k5"/>
    <animation name="Fade In Up" uuid="CV8t_94hMZOJ"/>
    <animation name="Fade Out" uuid="WsmEXWsKHehM"/>
    <animation name="Fade Out Down" uuid="xkwpUUXKXaKh"/>
    <animation name="Fade Out Left" uuid="4I7FFZXpTQqw"/>
    <animation name="Fade Out Right" uuid="v7VeJyZF8OiV"/>
    <animation name="Fade Out Up" uuid="WCNCocbUJlyZ"/>
    <animation name="Zoom In" uuid="8_EsQyUE1f6D"/>
    <animation name="Zoom In Down" uuid="nKgmo_Ih8ecU"/>
    <animation name="Zoom In Up" uuid="wDQdAk9BrYhY"/>
    <animation name="Zoom Out" uuid="-8XcUEhc_tFz"/>
    <animation name="Zoom Out Down" uuid="T1UpFUnBqbit"/>
    <animation name="Zoom Out Up" uuid="Mk_d1Et3X2KO"/>
    <animation name="Slide In Down" uuid="H_u23sDnaGBJ"/>
    <animation name="Slide In Left" uuid="amPxFRYy2Bqz"/>
    <animation name="Slide In Right" uuid="tlJWuYi8yUnT"/>
    <animation name="Slide In Up" uuid="l416FyqrLiVP"/>
    <animation name="Slide Out Down" uuid="IQTsEFKh0RaO"/>
    <animation name="Slide Out Left" uuid="yGtWsF8QCRpo"/>
    <animation name="Slide Out Right" uuid="JR7y0rUT-Qox"/>
    <animation name="Slide Out Up" uuid="x_snDqhPUPUr"/>
  </animations>
</project>"
`;
